--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generate-models",
+  "name": "@adocasts.com/generate-models",
   "description": "Generate Lucid Models from an existing database schema",
   "version": "0.0.0",
   "engines": {
@@ -7,55 +7,60 @@
   },
   "type": "module",
   "files": [
+    "build/commands",
     "build/src",
-    "build/providers",
     "build/stubs",
+    "build/configure.d.ts",
+    "build/configure.js",
     "build/index.d.ts",
     "build/index.js"
   ],
   "exports": {
     ".": "./build/index.js",
+    "./commands": "./build/commands/main.js",
     "./types": "./build/src/types.js"
   },
   "scripts": {
     "clean": "del-cli build",
     "copy:templates": "copyfiles \"stubs/**/*.stub\" build",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint . --ext=.ts",
+    "lint": "eslint .",
     "format": "prettier --write .",
     "quick:test": "node --import=./tsnode.esm.js --enable-source-maps bin/test.ts",
     "pretest": "npm run lint",
     "test": "c8 npm run quick:test",
     "prebuild": "npm run lint && npm run clean",
     "build": "tsc",
-    "postbuild": "npm run copy:templates",
+    "postbuild": "npm run copy:templates && npm run index:commands",
+    "index:commands": "adonis-kit index build/commands",
     "release": "np",
     "version": "npm run build",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.7.0",
-    "@adonisjs/core": "^6.12.0",
-    "@adonisjs/eslint-config": "^1.3.0",
+    "@adonisjs/assembler": "^7.8.2",
+    "@adonisjs/core": "^6.13.1",
+    "@adonisjs/eslint-config": "^2.0.0-beta.6",
     "@adonisjs/lucid": "^21.2.0",
-    "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/tsconfig": "^1.3.0",
+    "@adonisjs/prettier-config": "^1.4.0",
+    "@adonisjs/tsconfig": "^1.4.0",
     "@japa/assert": "^3.0.0",
     "@japa/runner": "^3.1.4",
-    "@swc/core": "^1.6.3",
-    "@types/node": "^20.14.5",
+    "@swc/core": "^1.7.26",
+    "@types/node": "^22.5.5",
     "c8": "^10.1.2",
     "copyfiles": "^2.4.1",
     "del-cli": "^5.1.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.10.0",
     "knex-schema-inspector": "^3.1.0",
-    "np": "^10.0.6",
-    "prettier": "^3.3.2",
+    "np": "^10.0.7",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-node-maintained": "^10.9.4",
+    "typescript": "^5.6.2"
   },
   "peerDependencies": {
-    "@adonisjs/core": "^6.2.0",
+    "@adonisjs/core": "^6.13.1",
     "@adonisjs/lucid": "^21.2.0"
   },
   "author": "tomgobich,adocasts.com",
@@ -66,9 +71,6 @@
     "model",
     "generate"
   ],
-  "eslintConfig": {
-    "extends": "@adonisjs/eslint-config/package"
-  },
   "prettier": "@adonisjs/prettier-config",
   "publishConfig": {
     "access": "public",
