--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@adocasts.com/generate-models",
   "description": "Generate Lucid Models from an existing database schema",
-  "version": "0.1.0-1.dev",
+  "version": "0.1.0-0.dev",
   "engines": {
     "node": ">=20.6.0"
   },
@@ -71,6 +71,14 @@
     "model",
     "generate"
   ],
+  "homepage": "https://github.com/adocasts/generate-models#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/adocasts/generate-models.git"
+  },
+  "bugs": {
+    "url": "https://github.com/adocasts/generate-models/issues"
+  },
   "prettier": "@adonisjs/prettier-config",
   "publishConfig": {
     "access": "public",
